# discordwebhookthingy

./: CMakeLists.txt  README.md  hookctl.cpp  hookctl.h  main.cpp  notifier.cpp  notifyctl.cpp  notifyctl.h
samples/: config.txt  webhook.txt
